feat: implement salary calculation service and add face-api testing scripts